# Agentspace-neo4j

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_TASK_LIST.md  README.md  app.py  install.sh  pyproject.toml  requirements.txt  start.sh  test_agent_local.py
.claude/: settings.local.json
.claude/doc/: doc.md  eval.md
.claude/docs/: doc.md
agents/: agent.py  query_utils.py  security.py
deployment/: deploy.py  test_deployment.py
eval/: baseline_results.json  baseline_results.summary.md  eval.md  generate_baseline.py  test_eval.py
neo4j_database_agent/: __init__.py  agent.py  agent_factory.py  simple_charts.py  tools.py
static/css/: style.css
static/js/: script.js
templates/: index.html
