[project]
name = "neo4j-adk-agent"
version = "1.0.0"
description = "Neo4j Agent with Google ADK - Natural Language to Cypher conversion"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ADK and Google Cloud dependencies
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-logging>=3.5.0",
    "google-cloud-monitoring>=2.14.0",
    
    # Authentication and credentials
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    
    # Neo4j driver
    "neo4j>=5.0.0",
    
    # Model Context Protocol (optional)
    "mcp>=0.1.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    
    # Command line interface
    "click>=8.0.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    
    # Web UI
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    
    # HTTP client
    "requests>=2.28.0",
    "httpx>=0.24.0",
    
    # Data processing
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    
    # Security
    "cryptography>=3.4.8",
    "certifi>=2022.12.7",
    
    # Monitoring and logging
    "structlog>=23.0.0",
    "prometheus-client>=0.16.0",
    
    # Date and time utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # JSON and data handling
    "ujson>=5.7.0",
    
    # Performance monitoring
    "psutil>=5.9.0",
    "memory-profiler>=0.60.0",
    
    # Additional Google Cloud services
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-bigquery>=3.4.0",
    
    # Progress bars and logging
    "tqdm>=4.65.0",
    "click-log>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

deployment = [
    "docker>=6.0.0",
    "kubernetes>=26.0.0",
    "google-cloud-notebooks>=1.7.0",
    "google-cloud-pipeline-components>=1.0.0",
]

[project.scripts]
neo4j-agent = "neo4j_agent.cli:main"
deploy-agent = "deploy:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["neo4j_agent*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["neo4j_agent"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]